--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,7 @@ input {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
 .subscribe-form {
@@ -536,8 +537,9 @@ input {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.04em;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .subscribe-button {
@@ -558,11 +560,11 @@ input {
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
-  gap: 24px;
 }
 
 .icon-subscribe {
   display: inline-flex;
+  margin-left: 16px;
 }
 
 /* Backdrop */
@@ -618,6 +620,7 @@ input {
 .close-modal-btn:hover,
 .close-modal-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-title {
@@ -749,7 +752,7 @@ input {
 
 .text-label-privacy a {
   color: #4d5ae5;
-  text-decoration: anderline;
+  text-decoration: underline;
 }
 
 .checkbox-privacy {
@@ -763,6 +766,7 @@ input {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   justify-content: center;
   align-items: center;
+  fill: transparent;
 }
 
 .checkbox-input:checked + .text-label-privacy span {
