--- a/css/styles.css
+++ b/css/styles.css
@@ -698,8 +698,8 @@ input {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   color: rgba(46, 47, 66, 0.4);
-  padding-top: 8px;
-  padding-left: 16px;
+  padding: 8px 16px;
+  background-color: transparent;
 }
 
 .modal-textarea:focus-within {
