--- a/css/styles.css
+++ b/css/styles.css
@@ -755,6 +755,10 @@ input {
   text-decoration: underline;
 }
 
+.icon-checkbox {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .checkbox-privacy {
   display: inline-flex;
   width: 16px;
