--- a/css/styles.css
+++ b/css/styles.css
@@ -654,18 +654,22 @@ input {
 }
 
 .modal-input {
-  width: 360px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: transparent;
   outline: transparent;
   padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-form {
   position: relative;
+}
+
+.modal-input:hover {
+  border-color: #4d5ae5;
 }
 
 .modal-input:focus-within {
@@ -676,7 +680,6 @@ input {
   position: absolute;
   left: 16px;
   top: 50%;
-  color: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(-50%);
   transition: stroke 300ms linear;
