--- a/css/styles.css
+++ b/css/styles.css
@@ -680,9 +680,8 @@ input {
   position: absolute;
   left: 16px;
   top: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(-50%);
-  transition: stroke 300ms linear;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover + .input-icon,
@@ -757,6 +756,10 @@ input {
 .text-label-privacy a {
   color: #4d5ae5;
   text-decoration: underline;
+}
+
+.icon-checkbox {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-privacy {
